--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Mirim</title>                                      <!-- 1. 제목 수정-->
+<title>Cham</title>                                      <!-- 1. 제목 수정-->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -85,7 +85,7 @@ body, html {
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
     <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">
-      미림 마이스터고 <span class="w3-hide-small">HomePage 제작</span> 체험 </span>
+      충암고등학교 <span class="w3-hide-small">HomePage 제작</span> 체험 </span>
   </div>
 </div>
 
